change some things

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Jolly Blog
-description: >-
-  Student Reverse Engineer and Malware Analyst
+title: Jollyc
+about: >-
+  A student that is interested in malware analysis and reverse engineering
   
 github: Jollycistaken
 twitter: Jollycistaken
